--- a/index.html
+++ b/index.html
@@ -1,264 +1,321 @@
 <!doctype html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DONKEY</title>
-
-  <meta name="description" content="DONKEY — Kick Memecoins Higher." />
-  <meta name="theme-color" content="#143221" />
-
-  <!-- Favicon -->
-  <link rel="icon" href="assets/favicon.png" />
-
-  <!-- Social preview -->
-  <meta property="og:title" content="DONKEY" />
-  <meta property="og:description" content="Kick Memecoins Higher." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="assets/og.png" />
-  <meta property="og:url" content="https://theboro78-lgtm.github.io/DONKEY/" />
-  <meta name="twitter:card" content="summary_large_image" />
-
-  <!-- Performance: preload background -->
-  <link rel="preload" href="assets/dollar-bg.png" as="image" />
-
-  <!-- Styles -->
+  <meta name="description" content="DONKEY — the most stubborn, most iconic animal meme. Kick Memecoins Higher." />
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Structured data (basic) -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"WebSite",
-    "name":"DONKEY",
-    "url":"https://theboro78-lgtm.github.io/DONKEY/",
-    "description":"Kick Memecoins Higher.",
-    "inLanguage":"en"
-  }
-  </script>
 </head>
 
 <body>
-  <a class="skip" href="#main">Skip to content</a>
+  <!-- Always-on film/grain overlay -->
   <div class="grain" aria-hidden="true"></div>
 
-  <header class="topbar">
-    <div class="wrap topbar__inner">
-      <a class="brand" href="#home" aria-label="Donkey Home">
-        <span class="brand__mark">DONKEY</span>
+  <!-- Sticky Top Bar -->
+  <header class="topbar" role="banner">
+    <div class="topbar__inner">
+      <a class="brand" href="#home" aria-label="DONKEY home">
+        <span class="brand__mark" aria-hidden="true">D</span>
+        <span class="brand__text">DONKEY</span>
       </a>
 
-      <nav class="nav" aria-label="Primary">
-        <a href="#home">home</a>
-        <a href="#about">about</a>
-        <a href="#buy">how to buy</a>
-        <a href="#tokenomics">tokenomics</a>
-        <a href="#roadmap">roadmap</a>
+      <nav class="nav" aria-label="Primary navigation">
+        <a class="nav__link" href="#home">home</a>
+        <a class="nav__link" href="#about">about</a>
+        <a class="nav__link" href="#how">how to buy</a>
+        <a class="nav__link" href="#tokenomics">tokenomics</a>
+        <a class="nav__link" href="#roadmap">roadmap</a>
       </nav>
 
-      <a class="cta" href="#buy">buy now</a>
+      <div class="topbar__cta">
+        <a class="btn btn--pill" href="#how">buy now</a>
+      </div>
     </div>
   </header>
 
-  <main id="main">
-    <!-- SECTION 1: HERO -->
-    <section id="home" class="section hero">
-      <div class="wrap hero__grid">
-        <div class="hero__copy">
-          <p class="kicker">The most stubborn, most iconic animal meme.</p>
-          <h1 class="title">DONKEY</h1>
+  <!-- HERO -->
+  <main class="page" id="home">
+    <section class="section hero">
+      <div class="wrap">
+        <div class="hero__grid">
+          <div class="hero__copy">
+            <div class="chip">Are we there yet?</div>
+            <h1 class="title">DONKEY</h1>
 
-          <p class="lead">
-            Dogs and frogs have had their day.<br />
-            Now Donkey kicks ’em to the curb.
-          </p>
+            <p class="kicker">
+              The most stubborn, most iconic animal meme.
+            </p>
 
-          <p class="tagline">Kick Memecoins Higher.</p>
+            <p class="lead">
+              Dogs and frogs have had their day.
+              <br />
+              Now Donkey kicks ’em to the curb.
+            </p>
 
-          <div class="hero__actions">
-            <a class="btn" href="#buy">How to buy</a>
-            <a class="btn btn--ghost" href="#about">Read the lore</a>
+            <p class="tagline"><em>Kick Memecoins Higher.</em></p>
+
+            <div class="hero__actions">
+              <a class="btn" href="#how">How to Buy</a>
+              <a class="btn btn--ghost" href="#tokenomics">Tokenomics</a>
+            </div>
+
+            <div class="meta">
+              <div class="meta__item">
+                <span class="meta__k">Ticker</span>
+                <span class="meta__v">$DONKEY</span>
+              </div>
+              <div class="meta__item">
+                <span class="meta__k">Chain</span>
+                <span class="meta__v">TBD</span>
+              </div>
+              <div class="meta__item">
+                <span class="meta__k">Vibe</span>
+                <span class="meta__v">Stubborn</span>
+              </div>
+            </div>
           </div>
 
-          <div class="chips" aria-label="Official links">
-            <a class="chip" href="#" rel="noopener">X</a>
-            <a class="chip" href="#" rel="noopener">Telegram</a>
-            <a class="chip" href="#" rel="noopener">DexScreener</a>
-            <a class="chip" href="#" rel="noopener">Explorer</a>
-          </div>
-
-          <p class="fineprint">Just a meme. No promises. No guarantees.</p>
-        </div>
-
-        <div class="hero__art" aria-hidden="true">
           <div class="artcard">
-            <div class="artcard__badge">ARE WE THERE YET?</div>
-            <div class="artcard__placeholder">DONKEY ART (TBA)</div>
-            <div class="artcard__sub">Drop your best meme here.</div>
+            <div class="artcard__top">
+              <span class="artcard__badge">HERO</span>
+              <span class="artcard__hint">cinematic stare</span>
+            </div>
+
+            <img class="hero__img" src="assets/donkey2.png" alt="DONKEY hero" />
+
+            <div class="artcard__sub">
+              Ask not what memecoins can do for you — ask how far the donkey can carry you.
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="divider" aria-hidden="true"></div>
+        <div class="tear" aria-hidden="true"></div>
+      </div>
     </section>
 
-    <!-- SECTION 2: ABOUT -->
-    <section id="about" class="section">
-      <div class="wrap split">
-        <div class="panel panel--art" aria-hidden="true">
-          <div class="panel__frame">
-            <div class="panel__placeholder">ABOUT ART (TBA)</div>
+    <!-- ABOUT -->
+    <section class="section about" id="about">
+      <div class="about-watermark" aria-hidden="true"></div>
+      <div class="wrap">
+        <h2 class="h2 center">about</h2>
+
+        <div class="split">
+          <div class="panel">
+            <h3>Not a hero. Not a savior. A donkey.</h3>
+            <p>
+              In meme history, the dogs ran. The frogs ruled. Then came the stubborn one:
+              the animal that refuses to quit, refuses to sell, and refuses to look impressed.
+            </p>
+            <p>
+              DONKEY is a tribute to internet persistence — the kind of energy that keeps walking
+              even when everyone else is busy arguing about charts.
+            </p>
+
+            <div class="quote">
+              <span class="quote__mark">“</span>
+              <p class="quote__text">
+                Just a meme. No promises. No guarantees.
+              </p>
+              <span class="quote__mark quote__mark--end">”</span>
+            </div>
+          </div>
+
+          <div class="panel panel--glass">
+            <div class="badgeRow">
+              <span class="badge">stubborn</span>
+              <span class="badge">iconic</span>
+              <span class="badge">memeable</span>
+              <span class="badge">unbothered</span>
+            </div>
+
+            <div class="callout">
+              <h4>Core idea</h4>
+              <p>
+                A meme token launch page that feels “hand-made”, but engineered.
+                Clean sections, consistent rhythm, and room for your future edits.
+              </p>
+            </div>
+
+            <div class="divider"></div>
+
+            <p class="fine">
+              Tip: keep most images static. Use 1–2 GIFs max as accent.
+            </p>
           </div>
         </div>
 
-        <div class="panel panel--text">
-          <h2 class="h2">about</h2>
-
-          <p>
-            Donkey bukan “anak turunan hype” — dia karakter klasik: keras kepala,
-            lucu, dan kadang nyebelin (itu justru seninya). Internet butuh ikon
-            yang bisa bawa meme naik kelas tanpa pura-pura serius.
-          </p>
-
-          <p>
-            Kita mulai sederhana: situs ringan, lore jelas, link resmi rapi,
-            dan komunitas yang suka ketawa dulu—baru gas.
-          </p>
-
-          <div class="callout">
-            <strong>Catchphrase:</strong> <span>“Are we there yet?”</span><br />
-            <span class="muted">Perjalanan panjang menuju liga besar — satu meme per hari.</span>
-          </div>
-        </div>
+        <div class="tear tear--thin" aria-hidden="true"></div>
       </div>
-
-      <div class="divider" aria-hidden="true"></div>
     </section>
 
-    <!-- SECTION 3: HOW TO BUY -->
-    <section id="buy" class="section">
+    <!-- HOW TO BUY -->
+    <section class="section" id="how">
       <div class="wrap">
         <h2 class="h2 center">how to buy</h2>
 
+        <div class="how-sticker" aria-hidden="true">
+          <img src="assets/donkey3.gif" alt="Donkey reaction gif" />
+        </div>
+
         <div class="cards">
           <article class="card">
-            <div class="card__icon">①</div>
-            <h3 class="card__title">Siapkan wallet</h3>
+            <div class="card__head">
+              <div class="card__icon">1</div>
+              <h3 class="card__title">Create a wallet</h3>
+            </div>
             <p class="card__text">
-              Gunakan wallet pilihan Anda. Jaga seed phrase, jangan share ke siapa pun.
+              Install a wallet you trust. Desktop or mobile — keep your seed phrase offline.
             </p>
           </article>
 
           <article class="card">
-            <div class="card__icon">②</div>
-            <h3 class="card__title">Isi gas</h3>
+            <div class="card__head">
+              <div class="card__icon">2</div>
+              <h3 class="card__title">Get gas</h3>
+            </div>
             <p class="card__text">
-              Siapkan gas fee (ETH/SOL sesuai chain). Lebih aman ada buffer.
+              Fund your wallet with the chain’s native token for fees. No gas, no ride.
             </p>
           </article>
 
           <article class="card">
-            <div class="card__icon">③</div>
-            <h3 class="card__title">Swap</h3>
+            <div class="card__head">
+              <div class="card__icon">3</div>
+              <h3 class="card__title">Swap for DONKEY</h3>
+            </div>
             <p class="card__text">
-              Buka DEX, paste contract, atur slippage seperlunya, lalu swap.
+              Use a DEX to swap. Verify the contract address carefully before you click confirm.
             </p>
           </article>
         </div>
 
-        <div class="note">
-          <span class="muted">
-            (Nanti kita isi contract address dan link resmi setelah final.)
-          </span>
+        <div class="notice">
+          <strong>Reminder:</strong> This is meme territory. Double-check links and addresses.
         </div>
+
+        <div class="tear tear--thin" aria-hidden="true"></div>
       </div>
-
-      <div class="divider" aria-hidden="true"></div>
     </section>
 
-    <!-- SECTION 4: TOKENOMICS -->
-    <section id="tokenomics" class="section">
-      <div class="wrap tokenomics">
+    <!-- TOKENOMICS -->
+    <section class="section" id="tokenomics">
+      <div class="wrap">
         <h2 class="h2 center">tokenomics</h2>
 
-        <div class="tokenomics__grid">
-          <div class="stat">
-            <div class="stat__label">token supply</div>
-            <div class="stat__value">TBA</div>
-          </div>
-
-          <div class="box">
-            <p><strong>No taxes.</strong> No theater.</p>
+        <div class="tokenGrid">
+          <div class="panel panel--glass">
+            <h3 class="panel__title">Token supply</h3>
+            <div class="bigNumber">TBD</div>
             <p class="muted">
-              Struktur dibuat sederhana, transparan, dan mudah dipahami komunitas.
+              Update supply, chain, taxes, LP notes, and any renounce/burn claims once final.
             </p>
-            <ul class="list">
-              <li>Supply: TBA</li>
-              <li>Liquidity: TBA</li>
-              <li>Contract: TBA</li>
-            </ul>
           </div>
 
-          <div class="badgeArt" aria-hidden="true">
-            <div class="badgeArt__ring"></div>
-            <div class="badgeArt__inner">DONKEY</div>
+          <div class="panel">
+            <h3 class="panel__title">Rules of the road</h3>
+            <ul class="list">
+              <li><span class="dot"></span> Keep it simple.</li>
+              <li><span class="dot"></span> Prefer clarity over hype.</li>
+              <li><span class="dot"></span> The meme does the marketing.</li>
+              <li><span class="dot"></span> The donkey does the carrying.</li>
+            </ul>
+
+            <div class="miniCard">
+              <p><strong>Note:</strong> Replace “TBD” with your final token details.</p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="divider" aria-hidden="true"></div>
+        <div class="tear tear--thin" aria-hidden="true"></div>
+      </div>
     </section>
 
-    <!-- SECTION 5: ROADMAP + FOOTER -->
-    <section id="roadmap" class="section">
+    <!-- ROADMAP -->
+    <section class="section" id="roadmap">
       <div class="wrap">
         <h2 class="h2 center">roadmap</h2>
 
-        <div class="road">
-          <div class="road__item">
-            <div class="road__phase">Phase 1</div>
-            <div class="road__text">Launch • Lore • Memes</div>
+        <div class="road-stage">
+          <div class="road-gif">
+            <img src="assets/donkey4.gif" alt="Nope gif" />
           </div>
-          <div class="road__item">
-            <div class="road__phase">Phase 2</div>
-            <div class="road__text">Community • Vibes • HODL</div>
+
+          <div class="panel panel--glass center">
+            <div class="road">
+              <div class="road__item">
+                <span class="road__phase">Phase 1</span>
+                <span class="road__text">Meme</span>
+              </div>
+              <div class="road__item">
+                <span class="road__phase">Phase 2</span>
+                <span class="road__text">Vibe & HODL</span>
+              </div>
+              <div class="road__item">
+                <span class="road__phase">Phase 3</span>
+                <span class="road__text">Meme Takeover</span>
+              </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <p class="fine">
+              Dogs and frogs have had their day — now the donkey follows, stubbornly, and keeps going.
+            </p>
           </div>
-          <div class="road__item">
-            <div class="road__phase">Phase 3</div>
-            <div class="road__text">Meme Takeover</div>
+
+          <div class="road-gif">
+            <img src="assets/donkey5.gif" alt="So what's up gif" />
           </div>
         </div>
 
         <footer class="footer">
-          <div class="footer__row">
-            <a class="chip" href="#" rel="noopener">X</a>
-            <a class="chip" href="#" rel="noopener">Telegram</a>
-          </div>
+          <div class="footer__bar">
+            <div class="footer__left">
+              <span class="footer__logo">DONKEY</span>
+              <span class="footer__sep">•</span>
+              <span class="footer__fine">Just a meme. No promises. No guarantees.</span>
+            </div>
 
-          <p class="footer__fine">
-            Donkey adalah meme coin tanpa nilai intrinsik dan tanpa ekspektasi return finansial.
-            Konten bersifat hiburan dan komunitas.
-          </p>
+            <div class="footer__right">
+              <a class="pill" href="#home">top</a>
+              <a class="pill" href="#how">buy</a>
+              <a class="pill" href="#tokenomics">details</a>
+            </div>
+          </div>
         </footer>
       </div>
     </section>
   </main>
 
   <script>
-    // Reveal-on-scroll (professional, lightweight)
-    const targets = document.querySelectorAll(
-      '.section .wrap, .card, .panel, .road__item, .stat, .box, .badgeArt, .artcard'
-    );
-
-    targets.forEach(el => el.classList.add('reveal'));
-
-    const io = new IntersectionObserver((entries) => {
-      entries.forEach(e => {
-        if (e.isIntersecting) e.target.classList.add('is-in');
+    // Smooth scrolling (polite & minimal)
+    document.querySelectorAll('a[href^="#"]').forEach(a => {
+      a.addEventListener('click', (e) => {
+        const id = a.getAttribute('href');
+        const el = document.querySelector(id);
+        if (!el) return;
+        e.preventDefault();
+        el.scrollIntoView({ behavior: 'smooth', block: 'start' });
       });
-    }, { threshold: 0.12 });
+    });
 
-    targets.forEach(el => io.observe(el));
+    // Active nav highlight
+    const links = [...document.querySelectorAll('.nav__link')];
+    const sections = links
+      .map(l => document.querySelector(l.getAttribute('href')))
+      .filter(Boolean);
+
+    const obs = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (!entry.isIntersecting) return;
+        links.forEach(l => l.classList.remove('is-active'));
+        const active = links.find(l => l.getAttribute('href') === '#' + entry.target.id);
+        if (active) active.classList.add('is-active');
+      });
+    }, { rootMargin: "-45% 0px -45% 0px", threshold: 0.01 });
+
+    sections.forEach(s => obs.observe(s));
   </script>
 </body>
 </html>
