--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DONKEY</title>
-  <meta name="description" content="DONKEY — the most stubborn, most iconic animal meme. Kick Memecoins Higher." />
+  <meta name="description" content="DONKEY — the most stubborn, most iconic animal meme./>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -132,15 +132,14 @@
             <div class="callout">
               <h4>Core idea</h4>
               <p>
-                A meme token launch page that feels “hand-made”, but engineered.
-                Clean sections, consistent rhythm, and room for your future edits.
+                Donkey is tired of watching everyone chase the same recycled frog and dog coins. The frogs and the dogs have had their day. It's time for the most stubborn, most iconic animal meme in the world to take his rightful place as king of memecoins. Donkey is here to make memecoins great again
               </p>
             </div>
 
             <div class="divider"></div>
 
             <p class="fine">
-              Tip: keep most images static. Use 1–2 GIFs max as accent.
+              Tip: Kick Memecoins Higher
             </p>
           </div>
         </div>
