--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DONKEY</title>
-  <meta name="description" content="DONKEY — the most stubborn, most iconic animal meme. />
+  <meta name="description" content="DONKEY — the most stubborn, most iconic animal meme. Kick Memecoins Higher." />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -131,14 +132,17 @@
             <div class="callout">
               <h4>Core idea</h4>
               <p>
-                Donkey is tired of watching everyone chase the same recycled frog and dog coins. The frogs and the dogs have had their day. It's time for the most stubborn, most iconic animal meme in the world to take his rightful place as king of memecoins. Donkey is here to make memecoins great again
+                Donkey is tired of watching everyone chase the same recycled frog and dog coins.
+                The frogs and the dogs have had their day.
+                 It's time for the most stubborn, most iconic animal meme in the world to take 
+                his rightful place as king of memecoins
               </p>
             </div>
 
             <div class="divider"></div>
 
             <p class="fine">
-              Tip: Kick Memecoins Higher
+              Tip: Kick Memecoins Higher.
             </p>
           </div>
         </div>
