--- a/index.html
+++ b/index.html
@@ -132,17 +132,15 @@
             <div class="callout">
               <h4>Core idea</h4>
               <p>
-                Donkey is tired of watching everyone chase the same recycled frog and dog coins.
-                The frogs and the dogs have had their day.
-                 It's time for the most stubborn, most iconic animal meme in the world to take 
-                his rightful place as king of memecoins
+                A meme token launch page that feels “hand-made”, but engineered.
+                Clean sections, consistent rhythm, and room for your future edits.
               </p>
             </div>
 
             <div class="divider"></div>
 
             <p class="fine">
-              Tip: Kick Memecoins Higher.
+              Tip: keep most images static. Use 1–2 GIFs max as accent.
             </p>
           </div>
         </div>
