--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <img class="hero__img" src="assets/donkey2.png" alt="DONKEY hero" />
 
             <div class="artcard__sub">
-              Ask not what memecoins can do for you — ask how far the donkey can carry you.
+              Ask not what memecoins can do for you, ask how far the donkey can carry you.
             </div>
           </div>
         </div>
@@ -115,7 +115,7 @@
             <div class="quote">
               <span class="quote__mark">“</span>
               <p class="quote__text">
-                Just a meme. No promises. No guarantees.
+                Kick Memecoins Higher.
               </p>
               <span class="quote__mark quote__mark--end">”</span>
             </div>
@@ -132,15 +132,15 @@
             <div class="callout">
               <h4>Core idea</h4>
               <p>
-                A meme token launch page that feels “hand-made”, but engineered.
-                Clean sections, consistent rhythm, and room for your future edits.
+                Donkey is tired of watching everyone chase the same recycled frog and dog coins.
+                It's time for the most stubborn, most iconic animal meme in the world to take his rightful place as king of memecoins.
               </p>
             </div>
 
             <div class="divider"></div>
 
             <p class="fine">
-              Tip: keep most images static. Use 1–2 GIFs max as accent.
+              Tip: Too Stubborn to Fail.
             </p>
           </div>
         </div>
@@ -245,15 +245,15 @@
             <div class="road">
               <div class="road__item">
                 <span class="road__phase">Phase 1</span>
-                <span class="road__text">Meme</span>
+                <span class="road__text">Kick Off</span>
               </div>
               <div class="road__item">
                 <span class="road__phase">Phase 2</span>
-                <span class="road__text">Vibe & HODL</span>
+                <span class="road__text">Stubborn HODL</span>
               </div>
               <div class="road__item">
                 <span class="road__phase">Phase 3</span>
-                <span class="road__text">Meme Takeover</span>
+                <span class="road__text">Donkey Dominance</span>
               </div>
             </div>
 
