--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </div>
               <div class="meta__item">
                 <span class="meta__k">Chain</span>
-                <span class="meta__v">TBD</span>
+                <span class="meta__v">Solana</span>
               </div>
               <div class="meta__item">
                 <span class="meta__k">Vibe</span>
@@ -115,7 +115,7 @@
             <div class="quote">
               <span class="quote__mark">“</span>
               <p class="quote__text">
-                Kick Memecoins Higher.
+                Too Stubborn to Fail.
               </p>
               <span class="quote__mark quote__mark--end">”</span>
             </div>
@@ -140,7 +140,7 @@
             <div class="divider"></div>
 
             <p class="fine">
-              Tip: Too Stubborn to Fail.
+              Tip: Kick Memecoins Higher
             </p>
           </div>
         </div>
@@ -205,10 +205,10 @@
 
         <div class="tokenGrid">
           <div class="panel panel--glass">
-            <h3 class="panel__title">Token supply</h3>
-            <div class="bigNumber">TBD</div>
+            <h3 class="panel__title">No Taxes, No Bullshit. It's that simple</h3>
+            <div class="bigNumber">Fair launch on pump.fun</div>
             <p class="muted">
-              Update supply, chain, taxes, LP notes, and any renounce/burn claims once final.
+              bonding curve guarantees transparency, liquidity, and zero rug risk. Community owned from the start
             </p>
           </div>
 
@@ -222,7 +222,7 @@
             </ul>
 
             <div class="miniCard">
-              <p><strong>Note:</strong> Replace “TBD” with your final token details.</p>
+              <p><strong>Note:</strong> Are we there yet?</p>
             </div>
           </div>
         </div>
