--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="tokenGrid">
           <div class="panel panel--glass">
             <h3 class="panel__title">No Taxes, No Bullshit. It's that simple</h3>
-            <div class="bigNumber">Fair launch on pump.fun</div>
+            <div class="card__title">Fair launch on pump.fun</div>
             <p class="muted">
               bonding curve guarantees transparency, liquidity, and zero rug risk. Community owned from the start
             </p>
