--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
         <div class="tokenGrid">
           <div class="panel panel--glass">
             <h3 class="panel__title">No Taxes, No Bullshit. It's that simple</h3>
-            <div class="card__title">Fair launch on pump.fun</div>
-            <p class="muted">
+            <div class="panel__title">Fair launch on pump.fun</div>
+            <p class="panel__title">
               bonding curve guarantees transparency, liquidity, and zero rug risk. Community owned from the start
             </p>
           </div>
